# Q_Client

./: .env  .gitignore  Cargo.toml  README.md  websocket_test.html
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html  manifest.json  test.html
frontend/src/: App.tsx  SimpleApp.tsx  TestComponent.tsx  index.tsx
frontend/src/components/: ComposeEmail.tsx  EmailDetail.tsx  EmailList.tsx  Login.tsx  Sidebar.tsx
frontend/src/components/Auth/: Login.tsx  QuantumKeyExchange.tsx  Registration.tsx
frontend/src/components/Common/: EncryptionStatus.tsx  NotificationSystem.tsx
frontend/src/components/Email/: Compose.tsx  EmailList.tsx  EmailView.tsx  QuantumEmailClient.tsx  SearchBar.tsx
frontend/src/components/Layout/: DarkThemeProvider.tsx  Header.tsx  Sidebar.tsx
frontend/src/hooks/: useAuth.ts  useAuth.tsx  useEmailManagement.ts  useEncryption.ts  useEncryption.tsx  useNotifications.ts  useNotifications.tsx  useWebSocket.ts
frontend/src/services/: authService.ts  emailService.ts  encryptionService.ts
frontend/src/styles/: darkTheme.ts  globalStyles.css
frontend/src/utils/: cryptoUtils.ts  webSocketUtils.ts
src/: config.rs  lib.rs  main.rs
src/database/: models.rs  schema.rs
src/quantum_encryption/: decryption.rs  encryption.rs  key_exchange.rs  mod.rs
src/utils/: error_handling.rs  logging.rs  mod.rs
src/websocket/: connection.rs  server.rs
