[package]
name = "quantum_email_client"
version = "0.1.0"
edition = "2021"
description = "Quantum Secure Email Client with post-quantum cryptography"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Core functionality
tokio = { version = "1.28", features = ["full"] }
axum = "0.6"
axum-extra = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }

# WebSockets
tokio-tungstenite = "0.19"
futures-util = "0.3"

# Cryptography
pqcrypto = "0.17"
pqcrypto-traits = "0.3"
pqcrypto-kyber = "0.7"
pqcrypto-dilithium = "0.4"
rand = "0.8"
sha3 = "0.10"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.13"
dotenv = "0.15"

# Web UI integration
rust-embed = "6.6"
mime_guess = "2.0"

[dev-dependencies]
tokio-test = "0.4"
mock-it = "0.4"
